# pps2024

./: Plotfun.py  README.md  advec_wave_2D.c  job_advec.sh  main_ex1.py  quicksort.cpp  quicksort_distributed.cpp  report_sheet3.pdf.pdf:Zone.Identifier
Ex1/: ADVC  advec.out  advec_correctness.c  advec_wave_2D.c  field_chunk_analytical_1  field_chunk_analytical_2  field_chunk_analytical_3  field_chunk_approximated_0  field_chunk_approximated_1  field_chunk_approximated_2  field_chunk_approximated_3  timed_outputs_nocomm.out  times_iter_100.out  times_iter_100_nocomm.out  times_iter_20.out  times_iter_40.out  times_iter_40_nocomm.out  times_iter_60_nocomm.out  times_iter_80.out
Ex1/data/: nodes=1_Comm=1.csv  nodes=1_Comm=2.csv  nodes=1_Comm=3.csv  nodes=2_Comm=1.csv  nodes=2_Comm=2.csv  nodes=2_Comm=3.csv
Ex1/executables/: ADV
Ex1/outputs/: field_chunk_analytical_0  timed_outputs.out  times_iter_100_size_5.out  times_iter_100_size_5_nocomm.out  times_iter_20_nocomm.out  times_iter_50_size_5.out  times_iter_60.out  times_iter_70.out  times_iter_80_nocomm.out
Ex1/scripts/: job_advec.sh  job_advec_correctness.sh
Ex2/: quicksort_distributed.cpp
Ex3/: CODE_USAGE.md  DE.out  DE_2_4_1.csv  DE_4_4_1.csv  DE_4_8_1.csv  core.c  heat.h  heat_mpi  io.c  job.sh  main.c  setup.c
Ex4/: README.md
Ex4/job-scripts/: qs_dist_gpu.sh  qs_gpu.sh  run-mpi.sh  run-multi.sh  run-single.sh
Ex4/src/: CMakeLists.txt  main.cu  qs_main.cu  quicksort_distributed_gpu.cu  quicksort_gpu.cu  reduce-mpi.cu  reduce-multi.cu  reduce-single.cu
